made page responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img id="logo-main" class="logo-main" src="assets/images/medix-logo.png" alt="">
         </div>
         <div class="aside-ul">
-            <ul class="dashboard-ul">
+            <ul class="dashboard-ul flex">
                 <li class="dashboard-items flex">
                     <img class="aside-icons hidden" src="assets/dashboardIcons/dashboard.png" alt="">
                     <a href="#">Dashboard</a>
@@ -69,9 +69,13 @@
         <div class="aside-img hidden">
             <img class="main-img" src="assets/images/image216.png" alt="clinic attendant with laptop waiting to attend to patients" class="main-img">
         </div>
-        <div class="aside-settings flex hidden">
-            <img class="aside-icons" src="assets/dashboardIcons/settings.png" alt="">
-            <p class="setting"><a>Settings</a></p>
+        <div class="aside-ul hidden">
+            <ul class="dashboard-ul">
+                <li class="dashboard-items flex">
+                    <img class="aside-icons hidden" src="assets/dashboardIcons/settings.png" alt="">
+                    <a href="#">Settings</a>
+                </li>
+            </ul>
             
         </div>
     </aside>
